internal/routegen/testdata/unsupported_spec.yaml
---
apiVersion: mysterapi.io/v1
kind: Mystery
metadata:
  name: my-myster-cr
  namespace: service-a
spec:
  random: field
